--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "formik": "^2.2.9",
     "moment": "^2.29.1",
     "next": "11.1.2",
+    "next-redux-wrapper": "^7.0.5",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "sass": "^1.43.2",
     "yup": "^0.32.11"
